# OPEN-SOURCE-CODE

./: LICENSE  README.md
.github/workflows/: codeql-analysis.yml
Commonly Used Java Classes/JavaString/: JavaStringContains.java
Cpp SOURCE CODE/Boost/: Note.txt
Cpp SOURCE CODE/Cpp basics/Exceptions/: divby0.cxx
Cpp SOURCE CODE/Cpp basics/STL Random/: randomcxx11.cxx
Cpp SOURCE CODE/GMP, MPFR, MPC/: Note.txt
Cpp SOURCE CODE/Projects/Classes/include/: class.hpp
Cpp SOURCE CODE/Projects/Classes/src/: class.cpp
Cpp SOURCE CODE/Projects/Hello World/include/: main.hpp
Cpp SOURCE CODE/Projects/Libraries/src/: main.c
Cpp SOURCE CODE/Projects/Mixed C and C++/: CMakeLists.txt
Cpp SOURCE CODE/Projects/Mixed C and C++/include/: header.h
Cpp SOURCE CODE/Projects/Mixed C and C++/src/: function.c
Cpp SOURCE CODE/Projects/Subprojects/src/: main.cpp
Cpp SOURCE CODE/Projects/Subprojects/subproject/include/: library.h
Cpp SOURCE CODE/Projects/Subprojects/subproject/src/: library.cpp
Cpp SOURCE CODE/SDL2/OpenGL ES/: CMakeLists.txt
Cpp SOURCE CODE/SDL2/OpenGL ES/src/: triangle_renderer.cpp
Cpp SOURCE CODE/SQLite/: Note.txt
Java SOURCE CODE/Commonly Used Java Classes/JavaDateFormatting/app/src/main/java/sample/: AddAMPMToFormattedDate.java  ConvertDateFormats.java  FormattingDateInCustomFormat.java  FormattingDateInDefaultFormats.java  FormattingDay.java  FormattingDayOfWeek.java
Java SOURCE CODE/∀/: Hello_World.java
Project Euler/: @.txt
Project Euler/1/: Q.txt  main.py
(+1 files in other folders)
